# OpenMP-fundamentals

./: CMakeLists.txt  README.md  build-cmake.sh  docker-build-cmake.sh
docker/: Dockerfile  create-docker.sh
src/: hello.c  linked.c  mandel.c  pi.c
